@@ -9,10 +9,11 @@ Cflags: -I${pc_top_builddir}/${pcfiledir}/gobject
 # pkg-config to get this value.  You might want to use this to
 # install additional headers.
 pygtkincludedir=${pc_top_builddir}/${pcfiledir}/gobject
+xslfiles=${pc_top_builddir}/${pcfiledir}/docs/xsl
 
 # same here.  Useful when calling the code generator in addon packages.
 defsdir=${pc_top_builddir}/${pcfiledir}/.
-fixxref=${pc_top_builddir}/pygobject-@VERSION@/docs/xsl/fixxref.py
+fixxref=${pc_top_builddir}/${pcfiledir}/docs/xsl/fixxref.py
 codegendir=${pc_top_builddir}/${pcfiledir}/gobject/codegen
-pygdocs=${pc_top_builddir}/pygobject-@VERSION@/docs
+pygdocs=${pc_top_builddir}/${pcfiledir}/docs
 datadir=${pc_top_builddir}/pygobject-@VERSION@
